--- a/kayitol.css
+++ b/kayitol.css
@@ -123,7 +123,7 @@ margin-right: auto;
     border-radius: 5px;
   }
 
-  .kartla-odeme {
+  .kartla-odecss  {
     border: 2px solid #e21111;
     background-color: #ffffff;
     color: #e21111;
