--- a/kayitol.css
+++ b/kayitol.css
@@ -123,13 +123,21 @@ margin-right: auto;
     border-radius: 5px;
   }
 
-  .kartla-odecss  {
-    border: 2px solid #e21111;
-    background-color: #ffffff;
-    color: #e21111;
+  .kartla-ode  {
+    background-color: #e21111;
+    color: #fff;
+    border: 3px solid #e21111;
+    border-radius: 10px;
+    padding: 10px 20px;
     font-size: 16px;
-    margin-right: 0;
+    font-weight: bold;
+    cursor: pointer;
+    text-decoration: none;
   }
+
+  .kartla-ode:hover {
+    background-color: #fff;
+    color: #e21111;
 }
 
 @media (max-width: 768px) {
@@ -280,23 +288,23 @@ nav a {
 }
 
 @media (max-width: 767px) {
-header {
-  flex-direction: column; 
-  align-items: center;
-}
-
-.logo {
-  margin-left: 20px;
-}
-
-nav {
-  margin-top: 10px; 
-}
-
-.kayit-ol {
-  margin-right: 75px;
-  align-items: center;
-  padding: 10px 0;
-  margin-left: 75px;
-}
-}
+  header {
+    flex-direction: column; 
+    align-items: center;
+  }
+  
+  .logo {
+    margin-left: 20px;
+  }
+  
+  nav {
+    margin-top: 10px; 
+  }
+  
+  .kayit-ol {
+    margin-right: 75px;
+    align-items: center;
+    padding: 10px 0;
+    margin-left: 75px;
+  }
+  }
