--- a/kayitol.css
+++ b/kayitol.css
@@ -38,20 +38,22 @@ nav a:hover {
 }
 
 .kayit-ol {
-  background-color: #e21111; 
-  color: #fff;
+  background-color: transparent;
   border: 3px solid #e21111;
+  color: #e21111;
   border-radius: 10px;
   padding: 10px 20px;
+  cursor: pointer;
   font-size: 16px;
   font-weight: bold;
-  cursor: pointer;
+  display: flex;
+  justify-content: center;
   text-decoration: none;
 }
 
 .kayit-ol:hover {
-  background-color: #fff;
-  color: #e21111;
+  background-color: #e21111;
+  color: #fff;
 }
 
 main {
