--- a/kayitol.css
+++ b/kayitol.css
@@ -203,17 +203,17 @@ footer {
 
 @media (max-width: 900px) {
   .logo {
-    margin-left: 20px;
-  }
+    margin-left: 20px; 
+}
 
-  nav a {
-    margin-right: 10px;
-  }
+nav a {
+    margin-right: 10px; 
+}
 
-  .kayit-ol {
-    margin-right: 20px;
-    font-size: 14px;
-  }
+.kayit-ol {
+  margin-right: 20px;
+  font-size: 14px; 
+}
 
   .odeme-bilgileri {
     margin-right: 20px;
@@ -224,30 +224,46 @@ footer {
   }
 }
 
-@media (max-width: 600px) { 
+@media (max-width: 900px) {
+  .logo {
+    margin-left: 20px;
+  }
+  
+  nav a {
+    margin-right: 10px;
+  }
+  
+  .kayit-ol {
+    margin-right: 20px;
+    font-size: 14px; 
+  }   
+  }
+
+@media (max-width: 600px) {
   header {
-  flex-direction: column; 
-  align-items: flex-start;
-}
-.logo {
-  margin-left: 20px;
-  margin-bottom: 15px;
-}
+      flex-direction: column; 
+      align-items: flex-start;
+  }
 
-nav a {
-  margin-bottom: 10px;
-}
+  .logo {
+      margin-left: 20px; 
+      margin-bottom: 15px; 
+  }
 
-.kayit-ol {
-  margin-right: 0;
-  width: 100%;
-}
+  nav a {
+      margin-bottom: 10px; 
+  }
 
-.form iframe {
-  width: 100%;
-}
+  .kayit-ol {
+    margin-right: 0;
+    width: 100%;
+  }
 
-.odeme-bilgileri .kartla-ode {
+  .form iframe {
+    width: 100%; 
+} 
+
+.odeme-bilgileri {
   margin-right: 0;
   width: 100%;
 }
@@ -256,7 +272,12 @@ nav a {
   margin-right: 0;
   width: 100%;
 }
+
+.kartla-ode {
+  margin-right: 0;
+  width: 100%;
 }
+} 
 
 @media (min-width: 768px) {
 .logo {
