--- a/kayitol.css
+++ b/kayitol.css
@@ -38,22 +38,20 @@ nav a:hover {
 }
 
 .kayit-ol {
-  background-color: transparent;
+  background-color: #e21111; 
+  color: #fff;
   border: 3px solid #e21111;
-  color: #e21111;
   border-radius: 10px;
   padding: 10px 20px;
-  cursor: pointer;
   font-size: 16px;
   font-weight: bold;
-  display: flex;
-  justify-content: center;
+  cursor: pointer;
   text-decoration: none;
 }
 
 .kayit-ol:hover {
-  background-color: #e21111;
-  color: #fff;
+  background-color: #fff;
+  color: #e21111;
 }
 
 main {
@@ -203,81 +201,51 @@ footer {
 
 @media (max-width: 900px) {
   .logo {
-    margin-left: 20px; 
-}
-
-nav a {
-    margin-right: 10px; 
-}
-
-.kayit-ol {
-  margin-right: 20px;
-  font-size: 14px; 
-}
-
-  .odeme-bilgileri {
-    margin-right: 20px;
-  }
-
-  .kartla-ode {
-    margin-right: 20px;
-  }
-}
-
-@media (max-width: 900px) {
-  .logo {
     margin-left: 20px;
   }
-  
+
   nav a {
     margin-right: 10px;
   }
-  
+
   .kayit-ol {
     margin-right: 20px;
-    font-size: 14px; 
-  }   
+    font-size: 14px;
   }
 
-@media (max-width: 600px) {
+  .odeme-bilgileri .kartla-ode {
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 600px) { 
   header {
-      flex-direction: column; 
-      align-items: flex-start;
-  }
+  flex-direction: column; 
+  align-items: flex-start;
+}
+.logo {
+  margin-left: 20px;
+  margin-bottom: 15px;
+}
 
-  .logo {
-      margin-left: 20px; 
-      margin-bottom: 15px; 
-  }
+nav a {
+  margin-bottom: 10px;
+}
 
-  nav a {
-      margin-bottom: 10px; 
-  }
-
-  .kayit-ol {
-    margin-right: 0;
-    width: 100%;
-  }
-
-  .form iframe {
-    width: 100%; 
-} 
-
-.odeme-bilgileri {
+.kayit-ol {
   margin-right: 0;
   width: 100%;
 }
 
-.kartla-ode {
-  margin-right: 0;
+.form iframe {
   width: 100%;
 }
 
-.kartla-ode {
+.odeme-bilgileri .kartla-ode {
   margin-right: 0;
   width: 100%;
 }
-} 
+}
 
 @media (min-width: 768px) {
 .logo {
