--- a/kayitol.css
+++ b/kayitol.css
@@ -229,7 +229,7 @@ footer {
   }
 
   .form iframe {
-    width: 75%;
+    width: 80%;
   }
 }
 
@@ -237,6 +237,6 @@ footer {
   /* Masaüstü Ekranlar */
 
   .form iframe {
-    width: 60%;
+    width: 80min%;
   }
 }
