--- a/kayitol.css
+++ b/kayitol.css
@@ -183,7 +183,7 @@ footer {
 
   header {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
   }
 
@@ -230,7 +230,7 @@ footer {
   }
 
   .form iframe {
-    width: 75%;
+    width: 90%;
   }
 }
 
@@ -238,7 +238,7 @@ footer {
   /* Masaüstü Ekranlar */
 
   .form iframe {
-    width: 60%;
+    width: 90%;
   }
 }
 
