--- a/kayitol.css
+++ b/kayitol.css
@@ -14,6 +14,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 10px;
   opacity: 85%;
 }
