--- a/kayitol.css
+++ b/kayitol.css
@@ -181,30 +181,22 @@ main {
     /* Mobil Cihazlar */
   
     header {
-      flex-direction: column; 
-      justify-content: center; 
+      flex-direction: column;
       align-items: center;
-      text-align: center; /* Logo, menü ve butonu ortalar */
     }
-  
+    
     .logo {
-      margin: 10px 0; /* Logo için üst-alt boşluk ekler */
-      margin-left: 0; /* Margin-left sıfırlar */
+      margin-left: 20px; 
+      margin-bottom: 15px;
     }
-  
-    nav {
-      margin-bottom: 10px; 
-      width: 100%; /* Menü öğelerinin tam genişlikte olmasını sağlar */
-    }
-  
+    
     nav a {
-      display: block; /* Menü öğelerini ayrı satırlara yerleştirir */
-      margin: 5px 0; /* Menü öğelerinin arasında boşluk ekler */
+      margin-bottom: 10px; 
     }
-  
+    
     .kayit-ol {
-      width: 100%; /* Butonun tam genişlikte olmasını sağlar */
-      margin-top: 10px; /* Buton ve menü öğeleri arasında boşluk ekler */
+      margin-right: 0;
+      width: 100%;
     }
   
     .form iframe {
@@ -229,14 +221,26 @@ main {
   @media only screen and (min-width: 481px) and (max-width: 768px) {
     /* Tabletler */
   
-    nav {
-      display: flex;
+    header {
+      flex-direction: column; 
+      align-items: center;
     }
-  
+    
     .logo {
-      margin-left: 200px;
+      margin-left: 20px;
     }
-  
+    
+    nav {
+      margin-top: 10px; 
+    }
+    
+    .kayit-ol {
+      margin-right: 75px;
+      align-items: center;
+      padding: 10px 0;
+      margin-left: 75px;
+    }
+
     .form iframe {
       width: 100%;
     }
@@ -244,8 +248,11 @@ main {
   
   @media only screen and (min-width: 769px) {
     /* Masaüstü Ekranlar */
-  
-    .form iframe {
-      width: 100%;
+    .logo {
+      margin-left: 200px;
+    }
+    
+    nav a {
+      font-size: 20px; 
     }
   }  
