--- a/index.css
+++ b/index.css
@@ -1,22 +1,25 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
-  background-image: url('./images/bg.jpeg'); 
+}
+
+body {
+  background-image: url('./images/bg.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  position: relative;    
+  position: relative;
 }
 
 body::before {
-   content: '';
-   position: absolute;
-   top: 0; 
-   left: 0;
-   width: 100%; 
-   height: 100%;
-   background-color: rgba(0, 0, 0, 0.5); 
-   z-index: -1; 
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
 }
 
 header {
@@ -29,7 +32,7 @@ header {
 }
 
 .logo {
-  margin-left: 300px;
+  margin-left: 30px;
   margin-right: 20px;
 }
 
@@ -97,7 +100,7 @@ main {
   margin: 20px;
 }
 
-h1 {
+h2 {
   font-size: 24px;
   font-weight: bold;
   color: black;
@@ -109,7 +112,7 @@ p {
   color: #777777;
 }
 
-footer { 
+footer {
   background-color: rgb(56, 56, 56);
   color: white;
   padding: 20px;
@@ -133,28 +136,16 @@ footer {
   color: #e21111;
 }
 
-.telif-hakkı {
-  margin: 0;
-}
-
 @media (max-width: 900px) {
-  .logo {
-    margin-left: 20px;
-  }
-
-  nav a {
-    margin-right: 10px;
-  }
-
   .kayit-ol {
     margin-right: 20px;
-    font-size: 14px; 
+    font-size: 14px;
   }
 }
 
 @media (max-width: 767px) {
   header {
-    flex-direction: column; 
+    flex-direction: column;
     align-items: center;
   }
 
@@ -188,6 +179,6 @@ footer {
   }
 
   nav a {
-    font-size: 20px; 
+    font-size: 20px;
   }
 }
