--- a/takımlar.css
+++ b/takımlar.css
@@ -1,216 +1,145 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-  }
-  
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: #000000;
-    opacity: 85%;
-  }
-  
-  .logo {
-    margin-left: 300px;
-    margin-right: 20px;
-  }
-  
-  .logo img {
-    height: 60px;
-    width: auto;
-  }
-  
-  nav {
-    display: flex;
-    margin-right: 20px;
-  }
-  
-  nav a {
-    margin-right: 20px;
-    text-decoration: none;
-    color: #ffffff;
-  }
-  
-  nav a:hover {
-    color: #e21111;
-  }
-  
-  .kayit-ol {
-    background-color: transparent;
-    border: 3px solid #e21111;
-    color: #e21111;
-    border-radius: 10px;
-    padding: 10px 20px;
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: bold;
-    display: flex;
-    justify-content: center;
-    text-decoration: none;
-  }
-  
-  .kayit-ol:hover {
-    background-color: #e21111;
-    color: #fff;
-  }
-  
-  
-  main {
-    padding: 20px;
-  }
-  
-  .form iframe {
-    border: none;  
-    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2); 
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-  
-  footer {
-    background-color: #ccc;
-    padding: 10px;
-    text-align: center;
-  }
-
-  footer {
-    background-color: rgb(56, 56, 56);
-    color: white;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  .sosyal-medya {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 10px;
-  }
-  
-  .sosyal-medya a {
-    margin: 0 10px;
-    color: white;
-    font-size: 24px;
-    transition: 0.3s;
-  }
-  
-  .sosyal-medya a:hover {
-    color: #e21111;
-  }
-  
-  .telif-hakkı {
-    margin: 0;
-  }
-  
-  @media (max-width: 900px) { 
-    .logo {
-        margin-left: 20px; 
-    }
-
-    nav a {
-        margin-right: 10px; 
-    }
-
-    .kayit-ol {
-      margin-right: 20px;
-      font-size: 14px; 
-    }  
+  font-family: Arial, sans-serif;
+  margin: 0;
 }
 
-@media (max-width: 600px) {
-    header {
-        flex-direction: column; 
-        align-items: flex-start;
-    }
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255);
+  z-index: -1;
+}
 
-    .logo {
-        margin-left: 20px; 
-        margin-bottom: 15px; 
-    }
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #000000;
+  opacity: 85%;
+}
 
-    nav a {
-        margin-bottom: 10px; 
-    }
+.logo {
+  margin-left: 30px;
+  margin-right: 20px;
+}
 
-    .kayit-ol {
-      margin-right: 0;
-      width: 100%;
-    }
+.logo img {
+  height: 60px;
+  width: auto;
+}
 
-    .form iframe {
-        width: 100%; 
-    } 
-} 
+nav {
+  display: flex;
+  margin-right: 20px;
+}
+
+nav a {
+  margin-right: 20px;
+  text-decoration: none;
+  color: #ffffff;
+}
+
+nav a:hover {
+  color: #e21111;
+}
+
+.kayit-ol {
+  background-color: transparent;
+  border: 3px solid #e21111;
+  color: #e21111;
+  border-radius: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+}
+
+.kayit-ol:hover {
+  background-color: #e21111;
+  color: #fff;
+}
+
+main {
+  padding: 20px;
+}
+
+.form iframe {
+  border: none;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer {
+  background-color: rgb(56, 56, 56);
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+.sosyal-medya {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+.sosyal-medya a {
+  margin: 0 10px;
+  color: white;
+  font-size: 24px;
+  transition: color 0.3s;
+}
+
+.sosyal-medya a:hover {
+  color: #e21111;
+}
+
+.telif-hakkı {
+  margin: 0;
+}
 
 @media (max-width: 900px) {
-  .logo {
-    margin-left: 20px;
-  }
-
-  nav a {
-    margin-right: 10px;
-  }
-
   .kayit-ol {
     margin-right: 20px;
-    font-size: 14px; 
-  }   
+    font-size: 14px;
+  }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   header {
     flex-direction: column;
     align-items: center;
   }
 
   .logo {
-    margin-left: 20px; 
+    margin-left: 20px;
     margin-bottom: 15px;
   }
 
+  nav {
+    margin-top: 10px;
+  }
+
   nav a {
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
   }
 
   .kayit-ol {
-    margin-right: 0;
+    margin: 0 75px 0 75px;
+    padding: 10px 0;
     width: 100%;
   }
 
-  .icerik-bolmesi {
-    width: 80%; 
-  }
-} 
-
-@media (min-width: 768px) {
-  .logo {
-    margin-left: 200px;
-  }
-
-  nav a {
-    font-size: 20px; 
-  }
-}
-
-@media (max-width: 767px) {
-  header {
-    flex-direction: column; 
-    align-items: center;
-  }
-
-  .logo {
-    margin-left: 20px;
-  }
-
-  nav {
-    margin-top: 10px; 
-  }
-
-  .kayit-ol {
-    margin-right: 75px;
-    align-items: center;
-    padding: 10px 0;
-    margin-left: 75px;
+  .form iframe {
+    width: 100%;
   }
 }
