--- a/kayitol.css
+++ b/kayitol.css
@@ -111,10 +111,11 @@ main {
 
 .form iframe {
   border: none;
-  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 0px 10px lightcoral;
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 15px;
 }
 
 .odeme-bilgileri {
